--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -308,6 +308,9 @@ Examples:
 * `set $/100 d/010120120 c/BBT`
 * `set $/300 d/29022020 c/shopping`
 
+
+// tag::split[]
+
 [[Split]]
 === Splitting a Bill with Friends : `split`
 
@@ -370,7 +373,9 @@ image::SplitUneven1.png[]
 +
 .Uneven split results
 image::SplitUneven2.png[]
+// end::split[]
 
+// tag::receive[]
 [[Receive]]
 === Receiving Money from a Friend : `receive`
 
@@ -394,6 +399,7 @@ image::Receive1.png[]
 image::Receive2.png[]
 +
 Albert is removed from the *Ledger* since he no longer owes any money. *Ledger* balance is also updated accordingly.
+//end::receive[]
 
 [[Project]]
 === Projecting Your Future Balance : `project`
