--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -78,8 +78,9 @@ This can prove to be rather tedious and cumbersome as users must remember every 
 Typee overcomes this by allowing users to interact with its interface and build commands sequentially. Users just need
 to type the relevant command word to get prompted about subsequent inputs.
 
-.The interactive component of Typee is highlighted above. +
+.The interactive component of Typee is highlighted above.
 image::interactive_parsing_0.png[width='520']
+{empty} +
 
 With interactive parsing, the aforementioned 'Add' command reduces to the following sequence of inputs: -
 ```
@@ -93,8 +94,9 @@ a/John | Smith
 p/High
 ```
 
-.Typee's prompt in response to the user entering `add` +
+.Typee's prompt in response to the user entering `add`
 image::interactive_parsing_1.png[height='90' width="800"]
+{empty} +
 
 Experienced users that have a grasp of the structure and format of various commands can also benefit from this feature.
 Interactive parsing allows multiple arguments to be input simultaneously, as long as the entered arguments adhere to a
@@ -108,11 +110,13 @@ d/Team Meeting
 a/John | Smith p/High
 ```
 
-.A user about to pass 3 arguments to Typee in one input, following `add`. +
+.A user about to pass 3 arguments to Typee in one input, following `add`.
 image::interactive_parsing_2.png[height='90' width='800']
+{empty} +
 
-.Typee's response to the above input. +
+.Typee's response to the above input.
 image::interactive_parsing_3.png[height='90' width='800']
+{empty} +
 
 Finally, a highly experienced user can create an 'Add' command in the conventional manner, i.e. by typing out
 the entire command at once. This is identical to the format introduced in the beginning of this section: -
@@ -151,7 +155,8 @@ exit
 
 [NOTE]
 Calling another dynamic command in the midst of building a `Tab` command will erase the details of the command preceding
-'Tab'. This happens if the command preceding `Tab` isn't fully built.
+'Tab'. This happens if the command preceding `Tab` isn't fully built. +
+For example: `add t/meeting` `tab` `// current` `b/calendar` will erase the information of the add command.
 
 ==== Valid Input Sequences
 
@@ -178,15 +183,17 @@ invalid and the user is prompted to enter a start date-time.
 This happens because the parser expects an argument for `s/`, but there is no such argument.
 As a consequence, all arguments that are supposed to be entered after `s/` (like `l/`) are not parsed.
 
-.Typee's response to `add t/meeting l/Meeting Room 2`. +
+.Typee's response to `add t/meeting l/Meeting Room 2`.
 image::interactive_parsing_6.png[width='800' height='90']
+{empty} +
 
 
 Similarly, `add t/meeting s/15/01/2019/1500 d/desc p/low` is parsed till `s/` and a prompt is raised to enter a valid end date-time, leaving `d/`
 and `p/` untouched.
 
-.Typee's response to `add t/meeting s/15/01/2019/1500 d/desc p/low`. +
+.Typee's response to `add t/meeting s/15/01/2019/1500 d/desc p/low`.
 image::interactive_parsing_7.png[width='800' height='90']
+{empty} +
 
 
 [NOTE]
@@ -209,11 +216,13 @@ An example of the first case is as follows: `add t/teeming`. "Teeming" is an inv
 and prompts the user to enter an acceptable engagement type instead. Since Typee has already begun building an 'Add' command,
 the subsequent input must begin with `t/...`
 
-.A user about to enter an invalid input. +
+.A user about to enter an invalid input.
 image::interactive_parsing_4.png[height='90' width='800']
+{empty} +
 
-.Typee's response to the invalid input. +
+.Typee's response to the invalid input.
 image::interactive_parsing_5.png[height='90' width='800']
+{empty} +
 
 
 Attempting to replace the argument for a parameter or supply different arguments to the same parameter will result in Typee rejecting
@@ -229,7 +238,7 @@ s/15/11/2019/1500
 t/interview
 ```
 
-Last but not least, Typee will reject cases wherein the user supplied excessive and irrelevant arguments.
+Last but not least, Typee will reject cases wherein the user supplies excessive and irrelevant arguments.
 `add t/meeting s/16/11/2019/1600 e/16/11/2019/1700 l/COM-1 d/Meeting a/Damith p/High o/High` will be rejected because `o/`
 is not a parameter for the 'Add' command.
 
@@ -253,7 +262,7 @@ Users can switch between respective windows in order to make full use of the app
 `Engagement` window is set to default window upon starting the application.
 
 If the user wants to switch to different windows, simply enter the tab command
-with refer to the menu name listed on the left end of the application window. +
+with a reference to the menu name listed on the left end of the application window. +
 
 For example, user enters `tab b/calendar`
 , which the system will switch to calendar view window with a result display message set to "Switched to window: Calendar". Refer to the screenshot below.
@@ -262,6 +271,16 @@ For example, user enters `tab b/calendar`
 Users who prefer using mouse over typing can alternatively click the green tabs on the top to switch to different menu windows.
 
 image::tab_2.png[width="800"]
+
+Users can start building a command in one tab, switch tabs midway and finish building the command in another tab.
+This can be achieved by the following sequence of inputs.
+```
+add
+t/meeting s/15/11/2019/1600 e/15/11/2019/1700
+tab
+b/calendar
+l/COM-1 d/Meeting a/Damith p/High
+```
 
 
 //end::tab-command[]
@@ -273,6 +292,7 @@ Format: `add t/ENGAGEMENT_TYPE s/START_TIME[dd/mm/YYYY/HHMM] e/END_TIME[dd/mm/YY
 
 .Enters Add Engagement Command in Command Input Text field.
 image::add_1.png[width="800" height='90']
+{empty} +
 
 Examples:
 
@@ -290,6 +310,7 @@ After user enters the above command, Typee will store the information and append
 
 .Engagement successfully saved in system storage.
 image::add_2.png[width="800"]
+{empty} +
 
 [TIP]
 The arguments to this command can be entered sequentially, leveraging the interaction offered by Typee. +
@@ -350,6 +371,8 @@ The list of attendees *does not* represent unique people. This is why attendees 
 Lists all engagements. +
 Format: `list`
 
+This command is useful in retrieving the original engagement list after executing commands that modify the viewed list, like `find`.
+
 //tag::sort[]
 === Sorting all engagements : `sort`
 
@@ -386,7 +409,7 @@ TIP: `sort` command can be done in one shot by giving all attributes at once. e.
 image::after-oneshot-sort.png[width="450"]
 
 [TIP]
-After sorting, commands that require INDEX as an input field (e.g. `delete`) will take in INDEX with regards to the new list  displayed. e.g. `delete 1` will delete the current first engagement displayed.
+After sorting, commands that require INDEX as an input field (e.g. `delete`) will take in INDEX with regards to the new list  displayed. e.g. `delete i/1` will delete the current first engagement displayed.
 //end::sort[]
 
 === Locating engagements by attendee, description, location and priority: `find`
@@ -466,7 +489,7 @@ Returns any engagement having attendee `Betsy`, description `Project Meeting`, l
 === Deleting an engagement : `delete`
 
 Deletes the specified engagement from the engagement list. +
-Format: `delete INDEX`
+Format: `delete i/INDEX`
 
 ****
 * Deletes the person at the specified `INDEX`.
@@ -478,12 +501,12 @@ Examples:
 
 ```
 list
-delete 2
+delete i/2
 ```
 Deletes the 2nd engagement in the engagement manager.
 ```
 find p/Low
-delete 1
+delete i/1
 ```
 Deletes the 1st engagement in the results of the `find` command.
 
@@ -499,7 +522,7 @@ Undoes the previous command, provided that it exists. +
 Format: `undo`
 
 [TIP]
-Undo supports the following commands that modify the engagement list: `add`, `edit`, `delete` and `clear`.
+Undo supports the following commands that modify the engagement list: `add`, `delete` and `clear`.
 
 Examples:
 
@@ -507,14 +530,14 @@ Examples:
 `undo` +
 Undoes the add command, i.e. the engagement with the description `CS2103T Discussion` will no longer be in the appointment manager.
 
-* `delete 1` +
+* `delete i/1` +
 `undo` +
 Undoes the delete command, i.e. restores the first engagement in the original displayed list.
 
 [.float-group]
 [.clearfix]
 --
-.Engagement list before the command `delete 1`
+.Engagement list before the command `delete i/1`
 image::after-list.png[width="450", float="left"]
 [.left]
 .Engagement list after deletion
@@ -530,9 +553,9 @@ Format: `redo`
 
 Examples:
 
-* `delete 1` +
-`undo` (reverts the `delete 1` command) +
-`redo` (reapplies the `delete 1` command) +
+* `delete i/1` +
+`undo` (reverts the `delete i/1` command) +
+`redo` (reapplies the `delete i/1` command) +
 
 Redoes the previous undo command, i.e. the engagement deleted before `undo` will be removed again from the engagement manager.
 
@@ -657,10 +680,10 @@ Pdf Command allows user to create a document of selected engagement in a given f
 Document template can be customised based on the customers's requirements, however, default document format will be in an email format,
 where the user can set who the user is going to send this document to inform an engagement. +
 
-Format: `pdf i/LIST_INDEX t/RECEIVER f/FROM` +
+Format: `pdf i/LIST_INDEX f/FROM t/RECEIVER` +
 
 For example, if the user wants to create a document of an engagement, which has a list index of 1, which can by observed in `engagement` window.
-User sets the sender as `John`, which is the user's name, and sets `receiver` as `Harry`. Hence, user enters `pdf i/1 t/Harry f/John` to generate the document.
+User sets the sender as `John`, which is the user's name, and sets `receiver` as `Harry`. Hence, user enters `pdf i/1 f/John t/Harry` to generate the document.
 
 [NOTE]
 User can generate multiple report documents with the same engagement, but with different SENDER and RECEIVER names. +
@@ -736,8 +759,8 @@ Relevant data will be loaded from the external file when the application starts.
 
 == Command Summary
 
-* *Add* `add t/ENGAGEMENT_TYPE s/START_TIME[dd/mm/YYYY/HHMM] e/END_TIME[dd/mm/YYYY/HHMM] l/LOCATION a/ATTENDEES d/DESCRIPTION p/PRIORITY` +
-e.g. `add t/Meeting s/18/10/2019/1500 e/18/10/2019/1800 l/COM-2-B1-03 a/John | Elijah | Sam d/CS2103T Discussion p/HIGH`
+* *Add* `add t/ENGAGEMENT_TYPE s/START_TIME[dd/mm/YYYY/HHMM] e/END_TIME[dd/mm/YYYY/HHMM] l/LOCATION d/DESCRIPTION a/ATTENDEES p/PRIORITY` +
+e.g. `add t/Meeting s/18/10/2019/1500 e/18/10/2019/1800 l/COM-2-B1-03 d/CS2103T Discussion a/John | Elijah | Sam p/HIGH`
 * *Tab*: `tab b/MENU_NAME`
 ** *Add Engagement* : `tab b/engagement`
 ** *Calendar* : `tab b/calendar`
