update DG diagrams

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -149,12 +149,10 @@ exposes its functionality to the rest of the application.
 
 ==== Architecture: Interactions between Components
 
-The sequence diagram below shows how the components interact with each
-other for the scenario where the user issues the command `delete 1`.
+The sequence diagram below shows how the components interact with each other
+for the scenario where the user issues the command `delete-task 1`.
 
-// TODO change wording in this section and the image
-
-.Component interactions for `delete 1` command
+.Component interactions for `delete-task 1` command
 image::ArchitectureSequenceDiagram.png[]
 
 The sections below give more details of each component.
@@ -217,17 +215,11 @@ parts.
 Shown below is the Sequence Diagram within the `Logic` component for the API
 call: `execute("add-course c/CS1010")`.
 
-// TODO create a new sequence diagram, and change the above command accordingly
 .Interactions Inside the Logic Component for the `add-course c/CS1010` Command
-image::DeleteSequenceDiagram.png[]
+image::AddSequenceDiagram.png[]
 
 The original caller to `LogicManager`, in the context of Jarvis, is the `Ui`
 component.
-
-// TODO do I need this note?
-NOTE: The lifeline for `DeleteAddressCommandParser` should end at the destroy
-marker (X) but due to a limitation of PlantUML, the lifeline reaches the end
-of diagram.
 
 Links : link:{repoURL}/blob/master/src/main/java/seedu/jarvis/logic/Logic.java[[API\]]
 link:{repoURL}/blob/master/src/main/java/seedu/jarvis/logic/[[Package\]]
