--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -608,6 +608,7 @@ add the category "Food" to that transaction.
 * `rule add p/IsMonthlyAllowance a/set_desc Monthly Allowance` +
 Adds a new rule that specifies that if the script named "IsMonthlyAllowance"
 returns true, change the transaction's description to "Monthly Allowance".
+// end::rules[]
 
 ==== List rules: `rule list`
 
@@ -615,7 +616,6 @@ Displays the list of all existing rules in the Rule Engine.
 Rules are sorted by the order in which they were added.
 
 Format: `rule list`
-// end::rules[]
 
 ==== Edit a rule: `rule edit`
 
@@ -645,6 +645,7 @@ Examples:
 * `rule delete 5` +
 Deletes the 5th rule in the list.
 
+// tag::ruleswap[]
 ==== Swap two rules: `rule swap`
 
 NOTE: Ths will affect the execution order of the rules.
@@ -658,6 +659,7 @@ Examples:
 
 * `rule swap 2 4` +
 Swaps the ordering of the 2nd rule and the 4th rule.
+// end::ruleswap[]
 
 // tag::scripting[]
 [[Scripting]]
